[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "qubex"
version = "0.1.0"
requires-python = ">=3.10"
authors = [{ name = "Akinori Machino" }]
description = "Qubex: Qubit experiment framework"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "cma ~= 4.0",
    "cvxopt ~= 1.3",
    "cvxpy ~= 1.6",
    "httpx",
    "jax",
    "jsonpickle ~= 3.0",
    "jupyter ~= 1.0",
    "kaleido == 0.2.1",
    "matplotlib ~= 3.0",
    "netCDF4 ~= 1.0",
    "networkx ~= 3.0",
    "numpy >= 1.23.5",
    "optax",
    "plotly ~= 5.23",
    "protobuf ~= 6.0",
    "pydantic ~= 2.0",
    "pyserial ~= 3.5",
    "pyyaml ~= 6.0",
    "qctrl-visualizer ~= 8.0",
    "qxcore @ git+https://github.com/amachino/qubex.git@develop-next#subdirectory=packages/qxcore",
    "qxpulse @ git+https://github.com/amachino/qubex.git@develop-next#subdirectory=packages/qxpulse",
    "qxsimulator @ git+https://github.com/amachino/qubex.git@develop-next#subdirectory=packages/qxsimulator",
    "qutip ~= 5.0",
    "rich ~= 13.0",
    "scikit-learn ~= 1.0",
    "scipy ~= 1.0",
    "sympy ~= 1.0",
    "tqdm ~= 4.0",
    "typedunits",
    "typing_extensions",
]

[project.optional-dependencies]
backend = [
    "qubecalib @ git+https://github.com/qiqb-osaka/qube-calib.git@3.1.16beta1",
]

[dependency-groups]
dev = [
    "pyinstrument",
    "pyright",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
]

docs = [
    "mkdocs",
    "mkdocs-autoapi[python]",
    "mkdocs-material",
    "mkdocs-jupyter",
    "mkdocstrings[python]",
    "mkdocs-autorefs",
    "pymdown-extensions",
]

[tool.setuptools.package-data]
qubex = ["py.typed", "clifford/**/*.json"]

[tool.uv]
cache-dir = ".cache/uv"

[tool.uv.sources]
qxcore = { workspace = true }
qxpulse = { workspace = true }
qxsimulator = { workspace = true }

[tool.uv.workspace]
members = ["packages/qxcore", "packages/qxpulse", "packages/qxsimulator"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:^(?!qubex\\.|tests\\.).*$"]

[tool.pyright]
include = ["src", "packages", "tests"]
typeCheckingMode = "basic"

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "PT",   # flake8-pytest-style
    "TID",  # flake8-tidy-imports
    "I",    # isort
    "PERF", # Perflint
    "E",    # pycodestyle
    "D",    # pydocstyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
    "TRY",  # tryceratops

    # pydocstyle
    "D213", # multi-line-summary-second-line
]

ignore = [
    # flake8-annotations
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN202", # missing-return-type-private-function
    "ANN204", # missing-return-type-special-method
    "ANN401", # any-type

    # flake8-bandit
    "S311", # suspicious-non-cryptographic-random-usage

    # flake8-comprehensions
    "C408", # unnecessary-collection-call

    # flake8-simplify
    "SIM102", # collapsible-if
    "SIM108", # if-else-block-instead-of-if-exp

    # pycodestyle
    "E501", # line-too-long
    "E731", # lambda-assignment
    "E741", # ambiguous-variable-name

    # Ruff-specific rules
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment

    # tryceratops
    "TRY003", # raise-vanilla-args
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "ANN", # flake8-annotations

    # Pyflakes
    "F401", # unused-import

    # flake8-bandit
    "S101", # assert
]
"tests/**/*.py" = [
    "ANN", # flake8-annotations

    # flake8-bandit
    "S101", # assert
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
